--- a/wiki/status.wiki
+++ b/wiki/status.wiki
@@ -5,7 +5,7 @@ I love using !ColourLovers and Kuler, but without getting to their webpage I can
 Along the way I extended things a little bit, I decided there was no reason that sets should be limited to five colors.  So Color Browser sets can have any number (within reason, of course).  You can duplicate a set, edit it and save it again.  You can rearrange sets any way you want to.  And you can double-click to open a color and view it in the full application.
 
 ==Adding Color Sets==
-You can certainly just type in the hex RGB values for the colors in a set you want to add.  But that can certainly take a while if you've got a number of sets to input.  So I've added a couple of other ways to add sets from my two favorite services.  Just download a CSS file from !ColourLovers, or an ASE file from Kuler, then drag them and drop them on the application.  It's that simple.
+You can just type in the hex RGB values for the colors in a set you want to add, and in this latest version you can double click swatches to use a color picker.  But that can still take a while if you've got a number of sets to input.  And if you're just trying to add someone else's set, why redo what they've done? So I've added a couple of other ways to add sets from my two favorite services.  Just download a CSS file from !ColourLovers, or an ASE file from Kuler, then drag them and drop them on the application.  It's that simple.
 
 ==Saving Your Favorites==
 Color Browser uses .color files to store your collections.  You can keep different collections on hand and switch between them easily.  You can also use them to send collections to anyone with the app.
